# aws-lambda-otel

./: .gitignore  README.md  justfile  pyproject.toml
iac/: iam.tf  lambda.tf  layers.tf  nat.tf  outputs.tf  variables.tf  vpc.tf
resources/: collector.yaml
src/o11ylambda/entrypoints/: aws_lambda.py
tests/: test_entrypoints_awslambda.py
