[project]
name = "aws-lambda-otel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "opentelemetry-propagator-b3>=1.39.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.44.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/o11ylambda", "resources"]

[tool.hatch.build.sources]
"src/o11ylambda" = "o11ylambda"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
